--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Collect resources, train and upgrade an army, and defeat waves of
+      enemies. Survive as long as you can!"
     />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
