--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Collect resources, train units, construct
-    buildings, and defeat waves of enemies. Survive as long as you can! />
+    <meta
+      name="description"
+      content="Collect resources, train units, construct
+    buildings, and defeat waves of enemies. Survive as long as you can!"
+    />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.jpg" />
 
