--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Collect resources, train units, construct buildings, and defeat waves of enemies. Survive as long as you can!"
+      content="An enemy army approaches! Collect resources, train units, construct buildings, and defeat waves of enemies. Survive as long as you can!"
     />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.jpg" />
